# OpenCVDemo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/com/example/opencvdemo/: MainActivity.java  NativeUtils.java
app/src/main/java/com/example/opencvdemo/_01/: BitmapUtils.java  GrayActivity.java
app/src/main/java/com/example/opencvdemo/_02/: MixActivity.java
app/src/main/java/com/example/opencvdemo/_03/: DrawActivity.java
app/src/main/java/com/example/opencvdemo/_04/: BeautyActivity.java
app/src/main/java/com/example/opencvdemo/_05/: CodeActivity.java
app/src/main/java/com/example/opencvdemo/_06/: CustomActivity.java
app/src/main/res/layout/: activity_beauty.xml  activity_code.xml  activity_custom.xml  activity_draw.xml  activity_gray.xml  activity_main.xml  activity_mix.xml
